--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
   fi
 
 before_script:
-- ". /opt/qt$SHORT_VER/bin/qt$SHORT_VER-env.sh"
+- if [ "$TRAVIS_OS_NAME" == "linux" ]; then . /opt/qt$SHORT_VER/bin/qt$SHORT_VER-env.sh;
 - qmake CONFIG+=$CONFIG CONFIG+=$CRYPT
 
 script:
