--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ dist: trusty
 
 env:
   global:
-    - QT_BASE=55 QT_LONG=551 VERSION=0.7.1
+    - QT_BASE=55 QT_LONG=551
 
 matrix:
   fast_finish: true
@@ -75,7 +75,7 @@ script:
 
 before_deploy:
   - cd ${TRAVIS_BUILD_DIR}/build/release
-  - ${TRAVIS_BUILD_DIR}/tools/mac_osx_deploy.sh $VERSION $CRYPT; fi
+  - ${TRAVIS_BUILD_DIR}/tools/mac_osx_deploy.sh $TRAVIS_TAG $CRYPT
 
 deploy:
   provider: releases
