--- a/.travis.yml
+++ b/.travis.yml
@@ -13,18 +13,18 @@ compiler:
   - gcc
 
 env:
-  - QT_BASE=56 QT_LONG=562 BREW_QT_VER_SHA=fdfc724dd532345f5c6cdf47dc43e99654e6a5fd CONFIG=debug
-  - QT_BASE=56 QT_LONG=562 BREW_QT_VER_SHA=fdfc724dd532345f5c6cdf47dc43e99654e6a5fd CONFIG=release DEPLOY=true
-  - QT_BASE=56 QT_LONG=562 BREW_QT_VER_SHA=fdfc724dd532345f5c6cdf47dc43e99654e6a5fd CONFIG=debug CRYPT=crypt
-  - QT_BASE=56 QT_LONG=562 BREW_QT_VER_SHA=fdfc724dd532345f5c6cdf47dc43e99654e6a5fd CONFIG=release CRYPT=crypt DEPLOY=true
-  - QT_BASE=57 QT_LONG=571 BREW_QT_VER_SHA=805b2e0b0201b2560235eb3ee5c724d241ba42d5 CONFIG=debug
-  - QT_BASE=57 QT_LONG=571 BREW_QT_VER_SHA=805b2e0b0201b2560235eb3ee5c724d241ba42d5 CONFIG=release
-  - QT_BASE=57 QT_LONG=571 BREW_QT_VER_SHA=805b2e0b0201b2560235eb3ee5c724d241ba42d5 CONFIG=debug CRYPT=crypt
-  - QT_BASE=57 QT_LONG=571 BREW_QT_VER_SHA=805b2e0b0201b2560235eb3ee5c724d241ba42d5 CONFIG=release CRYPT=crypt
-  - QT_BASE=58 QT_LONG=58  BREW_QT_VER_SHA=e8d5c92686cb4b9f3462dfa946c1f48c74b867f9 CONFIG=debug
-  - QT_BASE=58 QT_LONG=58  BREW_QT_VER_SHA=e8d5c92686cb4b9f3462dfa946c1f48c74b867f9 CONFIG=release
-  - QT_BASE=58 QT_LONG=58  BREW_QT_VER_SHA=e8d5c92686cb4b9f3462dfa946c1f48c74b867f9 CONFIG=debug CRYPT=crypt
-  - QT_BASE=58 QT_LONG=58  BREW_QT_VER_SHA=e8d5c92686cb4b9f3462dfa946c1f48c74b867f9 CONFIG=release CRYPT=crypt
+  - QT_BASE=56 QT_LONG=562 BREW_QT=fdfc724dd532345f5c6cdf47dc43e99654e6a5fd CONFIG=debug
+  - QT_BASE=56 QT_LONG=562 BREW_QT=fdfc724dd532345f5c6cdf47dc43e99654e6a5fd CONFIG=release DEPLOY=true
+  - QT_BASE=56 QT_LONG=562 BREW_QT=fdfc724dd532345f5c6cdf47dc43e99654e6a5fd CONFIG=debug CRYPT=crypt
+  - QT_BASE=56 QT_LONG=562 BREW_QT=fdfc724dd532345f5c6cdf47dc43e99654e6a5fd CONFIG=release CRYPT=crypt DEPLOY=true
+  - QT_BASE=57 QT_LONG=571 BREW_QT=805b2e0b0201b2560235eb3ee5c724d241ba42d5 CONFIG=debug
+  - QT_BASE=57 QT_LONG=571 BREW_QT=805b2e0b0201b2560235eb3ee5c724d241ba42d5 CONFIG=release
+  - QT_BASE=57 QT_LONG=571 BREW_QT=805b2e0b0201b2560235eb3ee5c724d241ba42d5 CONFIG=debug CRYPT=crypt
+  - QT_BASE=57 QT_LONG=571 BREW_QT=805b2e0b0201b2560235eb3ee5c724d241ba42d5 CONFIG=release CRYPT=crypt
+  - QT_BASE=58 QT_LONG=58  BREW_QT=59eefeed19fed3f56b4f712cb0434fd7eedf72eb CONFIG=debug
+  - QT_BASE=58 QT_LONG=58  BREW_QT=59eefeed19fed3f56b4f712cb0434fd7eedf72eb CONFIG=release
+  - QT_BASE=58 QT_LONG=58  BREW_QT=59eefeed19fed3f56b4f712cb0434fd7eedf72eb CONFIG=debug CRYPT=crypt
+  - QT_BASE=58 QT_LONG=58  BREW_QT=59eefeed19fed3f56b4f712cb0434fd7eedf72eb CONFIG=release CRYPT=crypt
 
 matrix:
   exclude:
@@ -32,15 +32,21 @@ matrix:
       compiler: gcc
 
 before_install:
-- if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository --yes ppa:beineri/opt-qt${QT_LONG}-trusty
-  && sudo apt-get update -qq
-  && sudo apt-get install -y -qq qt${QT_BASE}base qt${QT_BASE}script qt${QT_BASE}tools
-  && source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
-- if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update
-  && curl -O https://raw.githubusercontent.com/Homebrew/homebrew-core/${BREW_QT_VER_SHA}/Formula/qt5.rb
-  && brew install ./qt5.rb'
-  && brew link --force qt5'
-  && PATH="/usr/local/opt/qt5/bin:$PATH"; fi
+- if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+    sudo add-apt-repository --yes ppa:beineri/opt-qt${QT_LONG}-trusty;
+    sudo apt-get update -qq;
+    sudo apt-get install -y -qq qt${QT_BASE}base qt${QT_BASE}script qt${QT_BASE}tools;
+    source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh;
+  fi
+- if [ "$TRAVIS_OS_NAME" == "osx" ] && [ "$QT_BASE" == "58" ]; then
+    brew update;
+    brew install qt;
+    PATH="/usr/local/opt/qt5/bin:$PATH";
+  else
+    brew update;
+    brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/${BREW_QT}/Formula/qt5.rb;
+    PATH="/usr/local/opt/qt5/bin:$PATH";
+  fi
 
 before_script:
 - qmake CONFIG+=$CONFIG CONFIG+=$CRYPT
@@ -49,7 +55,10 @@ script:
 - make
 
 before_deploy:
-  - if [ "$DEPLOY" = "true" ] && [ "$TRAVIS_OS_NAME" == "osx" ]; then echo "Deployment for tag $TRAVIS_TAG $CRYPT" && ${TRAVIS_BUILD_DIR}/tools/mac_osx_deploy.sh $TRAVIS_TAG $CRYPT; fi
+  - if [ "$DEPLOY" = "true" ] && [ "$TRAVIS_OS_NAME" == "osx" ]; then
+      echo "Deployment for tag $TRAVIS_TAG $CRYPT";
+      ${TRAVIS_BUILD_DIR}/tools/mac_osx_deploy.sh $TRAVIS_TAG $CRYPT;
+    fi
   - export DMG_FILE=$(ls $TRAVIS_BUILD_DIR/build/release/*.dmg)
   - echo $(ls $TRAVIS_BUILD_DIR/build/release/)
 
