--- a/.travis.yml
+++ b/.travis.yml
@@ -32,21 +32,23 @@ matrix:
       compiler: gcc
 
 before_install:
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       sudo add-apt-repository --yes ppa:beineri/opt-qt${QT_LONG}-trusty;
       sudo apt-get update -qq;
       sudo apt-get install -y -qq qt${QT_BASE}base qt${QT_BASE}script qt${QT_BASE}tools;
       source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh;
     fi
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
+    - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ "$QT_BASE" == "58" ]; then
       brew update;
       brew install ccache;
       PATH="/usr/local/opt/ccache/libexec:$PATH";
-      if [ "$QT_BASE" == "58" ]; then
-        brew install qt;
-      else
-        brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/${BREW_QT}/Formula/qt5.rb;
-      fi
+      brew install qt;
+      PATH="/usr/local/opt/qt5/bin:$PATH";
+    else
+      brew update;
+      brew install ccache;
+      PATH="/usr/local/opt/ccache/libexec:$PATH";
+      brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/${BREW_QT}/Formula/qt5.rb;
       PATH="/usr/local/opt/qt5/bin:$PATH";
     fi
 
