--- a/.travis.yml
+++ b/.travis.yml
@@ -4,27 +4,23 @@ sudo: required
 
 dist: trusty
 
-osx_image: xcode8.3
-
 cache: ccache
 
 os:
   - linux
   - osx
 
+osx_image: xcode8.3
+
 compiler:
   - clang
   - gcc
 
 env:
-  - QT_BASE=56 QT_LONG=562 BREW_QT=fdfc724dd532345f5c6cdf47dc43e99654e6a5fd CONFIG=release
-  - QT_BASE=56 QT_LONG=562 BREW_QT=fdfc724dd532345f5c6cdf47dc43e99654e6a5fd CONFIG=release CRYPT=crypt
-  - QT_BASE=57 QT_LONG=571 BREW_QT=805b2e0b0201b2560235eb3ee5c724d241ba42d5 CONFIG=release
-  - QT_BASE=57 QT_LONG=571 BREW_QT=805b2e0b0201b2560235eb3ee5c724d241ba42d5 CONFIG=release CRYPT=crypt
-  - QT_BASE=58 QT_LONG=58  BREW_QT=59eefeed19fed3f56b4f712cb0434fd7eedf72eb CONFIG=debug
-  - QT_BASE=58 QT_LONG=58  BREW_QT=59eefeed19fed3f56b4f712cb0434fd7eedf72eb CONFIG=release DEPLOY=true
-  - QT_BASE=58 QT_LONG=58  BREW_QT=59eefeed19fed3f56b4f712cb0434fd7eedf72eb CONFIG=debug CRYPT=crypt
-  - QT_BASE=58 QT_LONG=58  BREW_QT=59eefeed19fed3f56b4f712cb0434fd7eedf72eb CONFIG=release CRYPT=crypt DEPLOY=true
+  - QT_BASE=58 QT_LONG=58  CONFIG=debug
+  - QT_BASE=58 QT_LONG=58  CONFIG=release
+  - QT_BASE=58 QT_LONG=58  CONFIG=debug CRYPT=crypt
+  - QT_BASE=58 QT_LONG=58  CONFIG=release CRYPT=crypt
 
 matrix:
   exclude:
@@ -32,31 +28,24 @@ matrix:
       compiler: gcc
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      sudo add-apt-repository --yes ppa:beineri/opt-qt${QT_LONG}-trusty;
-      sudo apt-get update -qq;
-      sudo apt-get install -y -qq qt${QT_BASE}base qt${QT_BASE}script qt${QT_BASE}tools;
-      source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh;
-    fi
-    - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ "$QT_BASE" == "58" ]; then
-      brew update;
-      brew install ccache;
-      PATH="/usr/local/opt/ccache/libexec:$PATH";
-      brew install qt;
-      PATH="/usr/local/opt/qt5/bin:$PATH";
-    else
-      brew update;
-      brew install ccache;
-      PATH="/usr/local/opt/ccache/libexec:$PATH";
-      brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/${BREW_QT}/Formula/qt5.rb;
-      PATH="/usr/local/opt/qt5/bin:$PATH";
-    fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo add-apt-repository -y ppa:beineri/opt-qt${QT_LONG}-trusty; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get update -qq; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get install -y -qq qt${QT_BASE}base qt${QT_BASE}script qt${QT_BASE}tools; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then brew update; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then brew install ccache; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then brew install qt; fi
 
 before_script:
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then export QT_DIR=/opt/qt${QT_BASE}; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then export PATH=/usr/local/opt/ccache/libexec:${PATH}; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then export QT_DIR=/usr/local/opt/qt5/; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then export PATH=/usr/local/opt/qt5/bin:${PATH}; fi
+  - which qmake
   - qmake CONFIG+=$CONFIG CONFIG+=$CRYPT
 
 script:
-  - make -j 2
+  - make -j2
   - ccache --show-stats
 
 before_deploy:
