--- a/.travis.yml
+++ b/.travis.yml
@@ -31,14 +31,15 @@ before_install:
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo add-apt-repository -y ppa:beineri/opt-qt${QT_LONG}-trusty; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get update -qq; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get install -y -qq qt${QT_BASE}base qt${QT_BASE}script qt${QT_BASE}tools; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then rvm get stable --auto-dotfiles; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then brew update; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then brew install ccache; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then PATH=$PATH:/usr/local/opt/ccache/libexec; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then brew install qt; fi
 
 before_script:
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then export QT_DIR=/opt/qt${QT_BASE}; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then export PATH=/usr/local/opt/ccache/libexec:${PATH}; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then export QT_DIR=/usr/local/opt/qt5/; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then export PATH=/usr/local/opt/qt5/bin:${PATH}; fi
   - which qmake
