--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ matrix:
       compiler: gcc
 
 before_install:
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo add-apt-repository -y ppa:beineri/opt-qt${QT_LONG}-trusty; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo add-apt-repository -y ppa:beineri/opt-qt-${QT_LONG}-trusty; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get update -qq; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get install -y -qq qt${QT_BASE}base qt${QT_BASE}script qt${QT_BASE}tools; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then rvm install ruby-2.5.0; rvm use 2.5.0; fi
