--- a/.travis.yml
+++ b/.travis.yml
@@ -2,25 +2,31 @@ language: cpp
 
 sudo: required
 
-dist: trusty
+dist: xenial
 
 cache: ccache
 
+env:
+  global:
+    - QT_BASE=511
+    - QT_LONG=5.11.2
+    - RUBY=2.5.3
+    - MACOSX_DEPLOYMENT_TARGET=10.12
 os:
   - linux
   - osx
 
-osx_image: xcode8.3
+osx_image: xcode9.4
 
 compiler:
   - clang
   - gcc
 
 env:
-  - QT_BASE=510 QT_LONG=5.10.1 CONFIG=debug
-  - QT_BASE=510 QT_LONG=5.10.1 CONFIG=release DEPLOY=true
-  - QT_BASE=510 QT_LONG=5.10.1 CONFIG=debug CRYPT=crypt
-  - QT_BASE=510 QT_LONG=5.10.1 CONFIG=release CRYPT=crypt DEPLOY=true
+  - CONFIG=debug
+  - CONFIG=release DEPLOY=true
+  - CONFIG=debug CRYPT=crypt
+  - CONFIG=release CRYPT=crypt DEPLOY=true
 
 matrix:
   exclude:
@@ -28,10 +34,10 @@ matrix:
       compiler: gcc
 
 before_install:
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo add-apt-repository -y ppa:beineri/opt-qt-${QT_LONG}-trusty; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo add-apt-repository -y ppa:beineri/opt-qt-${QT_LONG}-xenial; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get update -qq; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get install -y -qq qt${QT_BASE}base qt${QT_BASE}script qt${QT_BASE}tools; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then rvm install ruby-2.5.0; rvm use 2.5.0; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then rvm install ruby-${RUBY}; rvm use ${RUBY}; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then brew update; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then brew install ccache; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then PATH=$PATH:/usr/local/opt/ccache/libexec; fi
