--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,49 @@
 language: cpp
 
-sudo: required
-
 dist: xenial
+
+sudo: required
 
 cache: ccache
 
-env:
-  global:
-    - QT_BASE=511
-    - QT_LONG=5.11.2
-    - RUBY=2.5.3
-    - MACOSX_DEPLOYMENT_TARGET=10.12
-os:
-  - linux
-  - osx
-
-osx_image: xcode9.4
-
-compiler:
-  - clang
-  - gcc
-
-env:
-  - CONFIG=debug
-  - CONFIG=release DEPLOY=true
-  - CONFIG=debug CRYPT=crypt
-  - CONFIG=release CRYPT=crypt DEPLOY=true
-
 matrix:
-  exclude:
-    - os: osx
+  include:
+    - os: linux
+      compiler: clang
+      env: QT_BASE=511 QT_LONG=5.11.2 CONFIG=debug
+    - os: linux
+      compiler: clang
+      env: QT_BASE=511 QT_LONG=5.11.2 CONFIG=release
+    - os: linux
+      compiler: clang
+      env: QT_BASE=511 QT_LONG=5.11.2 CONFIG=debug CRYPT=crypt
+    - os: linux
+      compiler: clang
+      env: QT_BASE=511 QT_LONG=5.11.2 CONFIG=release CRYPT=crypt
+    - os: linux
       compiler: gcc
+      env: QT_BASE=511 QT_LONG=5.11.2 CONFIG=debug
+    - os: linux
+      compiler: gcc
+      env: QT_BASE=511 QT_LONG=5.11.2 CONFIG=release
+    - os: linux
+      compiler: gcc
+      env: QT_BASE=511 QT_LONG=5.11.2 CONFIG=debug CRYPT=crypt
+    - os: linux
+      compiler: gcc
+      env: QT_BASE=511 QT_LONG=5.11.2 CONFIG=release CRYPT=crypt
+    - os: osx
+      compiler: clang
+      env: MACOSX_DEPLOYMENT_TARGET=10.12 RUBY=2.5.3 CONFIG=debug
+    - os: osx
+      compiler: clang
+      env: MACOSX_DEPLOYMENT_TARGET=10.12 RUBY=2.5.3 CONFIG=release DEPLOY=true
+    - os: osx
+      compiler: clang
+      env: MACOSX_DEPLOYMENT_TARGET=10.12 RUBY=2.5.3 CONFIG=debug CRYPT=crypt
+    - os: osx
+      compiler: clang
+      env: MACOSX_DEPLOYMENT_TARGET=10.12 RUBY=2.5.3 CONFIG=debug CRYPT=crypt DEPLOY=true
 
 before_install:
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo add-apt-repository -y ppa:beineri/opt-qt-${QT_LONG}-xenial; fi
