--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ matrix:
 before_install:
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo add-apt-repository -y ppa:beineri/opt-qt-${QT_LONG}-xenial; fi
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get update -qq; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get install -y -qq qt${QT_BASE}base qt${QT_BASE}script qt${QT_BASE}tools; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get install -y -qq libgl1-mesa-dev qt${QT_BASE}base qt${QT_BASE}script qt${QT_BASE}tools; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then rvm install ruby-${RUBY}; rvm use ${RUBY}; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then brew update; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then brew install ccache; fi
