--- a/.travis.yml
+++ b/.travis.yml
@@ -1,75 +1,65 @@
 language: cpp
 
-dist: xenial
-
-sudo: required
-
-cache: ccache
+services:
+  - docker
 
 matrix:
   include:
     - os: linux
-      compiler: clang
-      env: QT_BASE=511 QT_LONG=5.11.2 CONFIG=debug
+      env: OS=ubuntu OS_VERSION=16.04
     - os: linux
-      compiler: clang
-      env: QT_BASE=511 QT_LONG=5.11.2 CONFIG=release
+      env: OS=ubuntu OS_VERSION=18.04
     - os: linux
-      compiler: clang
-      env: QT_BASE=511 QT_LONG=5.11.2 CONFIG=debug CRYPT=crypt
+      env: OS=ubuntu OS_VERSION=19.04
     - os: linux
-      compiler: clang
-      env: QT_BASE=511 QT_LONG=5.11.2 CONFIG=release CRYPT=crypt
+      env: OS=debian OS_VERSION=stable
     - os: linux
-      compiler: gcc
-      env: QT_BASE=511 QT_LONG=5.11.2 CONFIG=debug
+      env: OS=debian OS_VERSION=testing
     - os: linux
-      compiler: gcc
-      env: QT_BASE=511 QT_LONG=5.11.2 CONFIG=release
+      env: OS=fedora OS_VERSION=29
     - os: linux
-      compiler: gcc
-      env: QT_BASE=511 QT_LONG=5.11.2 CONFIG=debug CRYPT=crypt
+      env: OS=fedora OS_VERSION=30
     - os: linux
-      compiler: gcc
-      env: QT_BASE=511 QT_LONG=5.11.2 CONFIG=release CRYPT=crypt
+      env: OS=fedora OS_VERSION=31
+    - os: linux
+      env: OS=opensuse/leap OS_VERSION=42.3
+    - os: linux
+      env: OS=opensuse/leap OS_VERSION=15.0
+    - os: linux
+      env: OS=opensuse/leap OS_VERSION=15.1
+    - os: linux
+      env: OS=opensuse/tumbleweed OS_VERSION=latest
+    - os: linux
+      env: OS=archlinux/base OS_VERSION=latest
     - os: osx
       compiler: clang
-      env: MACOSX_DEPLOYMENT_TARGET=10.12 RUBY=2.5.3 CONFIG=debug
+      env: MACOSX_DEPLOYMENT_TARGET=10.12 CONFIG=debug
     - os: osx
       compiler: clang
-      env: MACOSX_DEPLOYMENT_TARGET=10.12 RUBY=2.5.3 CONFIG=release DEPLOY=true
+      env: MACOSX_DEPLOYMENT_TARGET=10.12 CONFIG=release DEPLOY=true
     - os: osx
       compiler: clang
-      env: MACOSX_DEPLOYMENT_TARGET=10.12 RUBY=2.5.3 CONFIG=debug CRYPT=crypt
+      env: MACOSX_DEPLOYMENT_TARGET=10.12 CONFIG=debug CRYPT=crypt
     - os: osx
       compiler: clang
-      env: MACOSX_DEPLOYMENT_TARGET=10.12 RUBY=2.5.3 CONFIG=release CRYPT=crypt DEPLOY=true
+      env: MACOSX_DEPLOYMENT_TARGET=10.12 CONFIG=release CRYPT=crypt DEPLOY=true
 
 before_install:
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo add-apt-repository -y ppa:beineri/opt-qt-${QT_LONG}-xenial; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get update -qq; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then sudo apt-get install -y -qq libgl1-mesa-dev qt${QT_BASE}base qt${QT_BASE}script qt${QT_BASE}tools; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then rvm install ruby-${RUBY}; rvm use ${RUBY}; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then brew update; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then brew install ccache; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then PATH=$PATH:/usr/local/opt/ccache/libexec; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then docker run --rm -v $(pwd):/effort-log $OS:$OS_VERSION bash; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then brew install qt; fi
 
 before_script:
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then export QT_DIR=/opt/qt${QT_BASE}; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then export QT_DIR=/usr/local/opt/qt5/; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then export PATH=/usr/local/opt/qt5/bin:${PATH}; fi
-  - which qmake
-  - qmake CONFIG+=$CONFIG CONFIG+=$CRYPT
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then cd /effort-log && bash ./tools/linux_before.sh $OS; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then export QT_DIR=/usr/local/opt/qt5/; export PATH=/usr/local/opt/qt5/bin:${PATH}; fi
 
 script:
-  - make -j2
-  - ccache --show-stats
+  - bash ./tools/unix_build.sh
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then bash ./tools/unix_build.sh; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then bash ${TRAVIS_BUILD_DIR}/tools/unix_build.sh; fi
 
 before_deploy:
   - echo "Deployment for tag $TRAVIS_TAG $CRYPT"
-  - ${TRAVIS_BUILD_DIR}/tools/mac_osx_deploy.sh $TRAVIS_TAG $CRYPT
+  - bash ${TRAVIS_BUILD_DIR}/tools/macos_deploy.sh $TRAVIS_TAG $CRYPT
   - export DMG_FILE=$(ls $TRAVIS_BUILD_DIR/build/release/*.dmg)
   - echo $(ls $TRAVIS_BUILD_DIR/build/release/)
 
