--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ before_script:
   - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then export QT_DIR=/usr/local/opt/qt5/; export PATH=/usr/local/opt/qt5/bin:${PATH}; qmake CONFIG+=$CONFIG CONFIG+=$CRYPT; fi
 
 script:
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then docker run --rm -v $(pwd):/effort-log $OS:$OS_VERSION bash /effort-log/tools/unix_build.sh; fi
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then docker run --rm -v $(pwd):/effort-log $OS:$OS_VERSION bash /effort-log/tools/linux_build.sh $OS; fi
   - if [ "${TRAVIS_OS_NAME}" = "osx" ];   then make -j2; fi
 
 before_deploy:
